amend the storybook bugs and add some examples

--- a/app/components/Button/stories/Icon.stories.mdx
+++ b/app/components/Button/stories/Icon.stories.mdx
@@ -26,10 +26,20 @@ import * as Icons from '../../../staticData/images/icons';
 
 ## Effects
 
-(Doesn't work properly in storybook)
+(Doesn't work properly in storybook Docs, check Canvas)
 
 <Preview>
   <Story name="glow">
     <IconButton type="clapIcon" colorSet="pureBlack" effect="glow" />
   </Story>
+</Preview>
+
+## Examples
+
+<Preview>
+  <IconButton type="logoIcon" colorSet="pureBlack" />
+  <IconButton type="twIcon" colorSet="gray" />
+  <IconButton type="moreIcon" colorSet="gray" />
+  <IconButton type="moreHollowIcon" colorSet="pureBlack" />
+  <IconButton type="clapIcon" colorSet="purple" effect="glow" />
 </Preview>
