--- a/app/components/Button/stories/Outlined.stories.mdx
+++ b/app/components/Button/stories/Outlined.stories.mdx
@@ -27,7 +27,12 @@ import { OutlinedButton } from '..';
     />
   </Story>
   <Story name="large">
-    <OutlinedButton text="large" type="outlined" size="tall" colorSet="black" />
+    <OutlinedButton
+      text="large"
+      type="outlined"
+      size="large"
+      colorSet="black"
+    />
   </Story>
 </Preview>
 
@@ -50,4 +55,28 @@ import { OutlinedButton } from '..';
       colorSet="black"
     />
   </Story>
+</Preview>
+
+## Example
+
+<Preview>
+  <OutlinedButton text="Follow" type="outlined" size="small" colorSet="blue" />
+  <OutlinedButton
+    text="Following"
+    type="filled"
+    size="large"
+    colorSet="green"
+  />
+  <OutlinedButton
+    text="Upgrade"
+    type="outlined"
+    size="middle"
+    colorSet="black"
+  />
+  <OutlinedButton
+    text="Get Started"
+    type="outlined"
+    size="large"
+    colorSet="red"
+  />
 </Preview>
