--- a/app/staticData/stories/ColorPaletes.stories.mdx
+++ b/app/staticData/stories/ColorPaletes.stories.mdx
@@ -7,7 +7,9 @@ import getColor, { colorSet } from '../colorSets';
 
 # Color Palete
 
-## Colors
+## Color sets
+
+(pureBlack and pureGrey will have no hover effect because the props color, borderColor and hoverColor are same.)
 
 <Preview>
   <Story name="colors">
