Genre Card v0.2 finished

--- a/app/components/GenreCard/stories/Genre.stories.mdx
+++ b/app/components/GenreCard/stories/Genre.stories.mdx
@@ -10,11 +10,20 @@ import GenreCard from '../index.js';
 # GenreCard Example
 
 <Preview>
-  <Story name="genreCard example">
+  <Story name="GenreCard Default">
     <GenreCard
       Genre="Art"
       GenreLink="https://medium.com/topic/art"
       GenreImg="https://cdn-images-1.medium.com/fit/c/560/360/1*H2blBoEmzkSusI_a4Bk0dg@2x.jpeg"
+      GenreType="default"
+    />
+  </Story>
+  <Story name="GenreCard Active">
+    <GenreCard
+      Genre="Art"
+      GenreLink="https://medium.com/topic/art"
+      GenreImg="https://cdn-images-1.medium.com/fit/c/560/360/1*H2blBoEmzkSusI_a4Bk0dg@2x.jpeg"
+      GenreType="active"
     />
   </Story>
 </Preview>
