GenreCardButton merged into GenreCard fixed

--- a/app/components/GenreCard/stories/Genre.stories.mdx
+++ b/app/components/GenreCard/stories/Genre.stories.mdx
@@ -15,7 +15,7 @@ import GenreCard from '../index.js';
       Genre="Art"
       GenreLink="https://medium.com/topic/art"
       GenreImg="https://cdn-images-1.medium.com/fit/c/560/360/1*H2blBoEmzkSusI_a4Bk0dg@2x.jpeg"
-      GenreType="default"
+      GenreState="default"
     />
   </Story>
   <Story name="GenreCard Active">
@@ -23,7 +23,7 @@ import GenreCard from '../index.js';
       Genre="Art"
       GenreLink="https://medium.com/topic/art"
       GenreImg="https://cdn-images-1.medium.com/fit/c/560/360/1*H2blBoEmzkSusI_a4Bk0dg@2x.jpeg"
-      GenreType="active"
+      GenreState="active"
     />
   </Story>
 </Preview>
