--- a/app/components/GenreCard/stories/Genre.stories.mdx
+++ b/app/components/GenreCard/stories/Genre.stories.mdx
@@ -12,18 +12,20 @@ import GenreCard from '../index.js';
 <Preview>
   <Story name="GenreCard Default">
     <GenreCard
-      Genre="Art"
-      GenreLink="https://medium.com/topic/art"
-      GenreImg="https://cdn-images-1.medium.com/fit/c/560/360/1*H2blBoEmzkSusI_a4Bk0dg@2x.jpeg"
-      GenreState="default"
+      genre="Art"
+      genreLink="https://medium.com/topic/art"
+      genreImg="https://cdn-images-1.medium.com/fit/c/560/360/1*H2blBoEmzkSusI_a4Bk0dg@2x.jpeg"
+      genreState="defaultState"
+      onClick={() => {}}
     />
   </Story>
   <Story name="GenreCard Active">
     <GenreCard
-      Genre="Art"
-      GenreLink="https://medium.com/topic/art"
-      GenreImg="https://cdn-images-1.medium.com/fit/c/560/360/1*H2blBoEmzkSusI_a4Bk0dg@2x.jpeg"
-      GenreState="active"
+      genre="Art"
+      genreLink="https://medium.com/topic/art"
+      genreImg="https://cdn-images-1.medium.com/fit/c/560/360/1*H2blBoEmzkSusI_a4Bk0dg@2x.jpeg"
+      genreState="activeState"
+      onClick={() => {}}
     />
   </Story>
 </Preview>
