--- a/app/components/Input/stories/Input.stories.mdx
+++ b/app/components/Input/stories/Input.stories.mdx
@@ -12,7 +12,7 @@ import Input from '../index.js';
 <Preview>
   <Story name="SearchInput">
     <div style={{ border: '1px solid black', height: '40px', width: '260px' }}>
-      <Input placeholderName="Search Medium" />
+      <Input placeholderName="Search Medium" inputDisplay="false" />
     </div>
   </Story>
 </Preview>
