add test for ArticleTitle

--- a/app/components/ArticleTitle/stories/ArticleTitle.stories.mdx
+++ b/app/components/ArticleTitle/stories/ArticleTitle.stories.mdx
@@ -2,7 +2,7 @@ import { Meta, Story, Preview, Props } from '@storybook/addon-docs/blocks';
 import ArticleTitle from '..';
 import articleInfo from './exampleData';
 
-<Meta title="Components|ArticleTitle" component={ArticleTitle} />;
+<Meta title="Components|ArticleTitle" component={ArticleTitle} />
 
 # ArticleTitle
 
@@ -11,7 +11,6 @@ import articleInfo from './exampleData';
 ## HomeHeroLeft
 
 <Preview>
-  <div />
   <Story name="HomeHeroLeft">
     <ArticleTitle {...articleInfo} type="HomeHeroLeft" />
   </Story>
@@ -20,7 +19,6 @@ import articleInfo from './exampleData';
 ## HomeHeroMid
 
 <Preview>
-  <div />
   <Story name="HomeHeroMid">
     <ArticleTitle {...articleInfo} type="HomeHeroMid" />
   </Story>
@@ -29,7 +27,6 @@ import articleInfo from './exampleData';
 ## HomeHeroRight
 
 <Preview>
-  <div />
   <Story name="HomeHeroRight">
     <ArticleTitle {...articleInfo} type="HomeHeroRight" />
   </Story>
@@ -38,7 +35,6 @@ import articleInfo from './exampleData';
 ## HomeList
 
 <Preview>
-  <div />
   <Story name="HomeList">
     <ArticleTitle {...articleInfo} type="HomeList" />
   </Story>
@@ -47,7 +43,6 @@ import articleInfo from './exampleData';
 ## Sidebar
 
 <Preview>
-  <div />
   <Story name="Sidebar">
     <ArticleTitle {...articleInfo} type="Sidebar" />
   </Story>
@@ -56,7 +51,6 @@ import articleInfo from './exampleData';
 ## TopicHomepageHero
 
 <Preview>
-  <div />
   <Story name="TopicHomepageHero">
     <ArticleTitle {...articleInfo} type="TopicHomepageHero" />
   </Story>
@@ -65,7 +59,6 @@ import articleInfo from './exampleData';
 ## TopicHomepageList
 
 <Preview>
-  <div />
   <Story name="TopicHomepageList">
     <ArticleTitle {...articleInfo} type="TopicHomepageList" />
   </Story>
@@ -74,7 +67,6 @@ import articleInfo from './exampleData';
 ## CollectionHomepageHero
 
 <Preview>
-  <div />
   <Story name="CollectionHomepageHero">
     <ArticleTitle {...articleInfo} type="CollectionHomepageHero" />
   </Story>
@@ -83,16 +75,22 @@ import articleInfo from './exampleData';
 ## CollectionHomepageList
 
 <Preview>
-  <div />
   <Story name="CollectionHomepageList">
     <ArticleTitle {...articleInfo} type="CollectionHomepageList" />
+  </Story>
+</Preview>
+
+## ArticlePageTitle
+
+<Preview>
+  <Story name="ArticlePageTitle">
+    <ArticleTitle {...articleInfo} type="ArticlePageTitle" />
   </Story>
 </Preview>
 
 ## ArticlePageRecommend
 
 <Preview>
-  <div />
   <Story name="ArticlePageRecommend">
     <ArticleTitle {...articleInfo} type="ArticlePageRecommend" />
   </Story>
