--- a/app/components/ArticleTitle/stories/ArticleTitle.stories.mdx
+++ b/app/components/ArticleTitle/stories/ArticleTitle.stories.mdx
@@ -12,7 +12,7 @@ import articleInfo from './exampleData';
 
 <Preview>
   <Story name="HomeHeroLeft">
-    <ArticleTitle {...articleInfo} type="HomeHeroLeft" />
+    <ArticleTitle {...articleInfo} variation="HomeHeroLeft" />
   </Story>
 </Preview>
 
@@ -20,7 +20,7 @@ import articleInfo from './exampleData';
 
 <Preview>
   <Story name="HomeHeroMid">
-    <ArticleTitle {...articleInfo} type="HomeHeroMid" />
+    <ArticleTitle {...articleInfo} variation="HomeHeroMid" />
   </Story>
 </Preview>
 
@@ -28,7 +28,7 @@ import articleInfo from './exampleData';
 
 <Preview>
   <Story name="HomeHeroRight">
-    <ArticleTitle {...articleInfo} type="HomeHeroRight" />
+    <ArticleTitle {...articleInfo} variation="HomeHeroRight" />
   </Story>
 </Preview>
 
@@ -36,7 +36,7 @@ import articleInfo from './exampleData';
 
 <Preview>
   <Story name="HomeList">
-    <ArticleTitle {...articleInfo} type="HomeList" />
+    <ArticleTitle {...articleInfo} variation="HomeList" />
   </Story>
 </Preview>
 
@@ -44,7 +44,7 @@ import articleInfo from './exampleData';
 
 <Preview>
   <Story name="Sidebar">
-    <ArticleTitle {...articleInfo} type="Sidebar" />
+    <ArticleTitle {...articleInfo} variation="Sidebar" />
   </Story>
 </Preview>
 
@@ -52,7 +52,7 @@ import articleInfo from './exampleData';
 
 <Preview>
   <Story name="TopicHomepageHero">
-    <ArticleTitle {...articleInfo} type="TopicHomepageHero" />
+    <ArticleTitle {...articleInfo} variation="TopicHomepageHero" />
   </Story>
 </Preview>
 
@@ -60,7 +60,7 @@ import articleInfo from './exampleData';
 
 <Preview>
   <Story name="TopicHomepageList">
-    <ArticleTitle {...articleInfo} type="TopicHomepageList" />
+    <ArticleTitle {...articleInfo} variation="TopicHomepageList" />
   </Story>
 </Preview>
 
@@ -68,7 +68,7 @@ import articleInfo from './exampleData';
 
 <Preview>
   <Story name="CollectionHomepageHero">
-    <ArticleTitle {...articleInfo} type="CollectionHomepageHero" />
+    <ArticleTitle {...articleInfo} variation="CollectionHomepageHero" />
   </Story>
 </Preview>
 
@@ -76,7 +76,7 @@ import articleInfo from './exampleData';
 
 <Preview>
   <Story name="CollectionHomepageList">
-    <ArticleTitle {...articleInfo} type="CollectionHomepageList" />
+    <ArticleTitle {...articleInfo} variation="CollectionHomepageList" />
   </Story>
 </Preview>
 
@@ -84,7 +84,7 @@ import articleInfo from './exampleData';
 
 <Preview>
   <Story name="ArticlePageTitle">
-    <ArticleTitle {...articleInfo} type="ArticlePageTitle" />
+    <ArticleTitle {...articleInfo} variation="ArticlePageTitle" />
   </Story>
 </Preview>
 
@@ -92,6 +92,6 @@ import articleInfo from './exampleData';
 
 <Preview>
   <Story name="ArticlePageRecommend">
-    <ArticleTitle {...articleInfo} type="ArticlePageRecommend" />
+    <ArticleTitle {...articleInfo} variation="ArticlePageRecommend" />
   </Story>
 </Preview>
