finished most ArticlePosters, changed some former component and resources base on need

--- a/app/components/ArticleTitle/stories/ArticleTitle.stories.mdx
+++ b/app/components/ArticleTitle/stories/ArticleTitle.stories.mdx
@@ -88,10 +88,10 @@ import articleInfo from './exampleData';
   </Story>
 </Preview>
 
-## ArticlePageRecommend
+## ArticlePageRecommendation
 
 <Preview>
-  <Story name="ArticlePageRecommend">
-    <ArticleTitle {...articleInfo} variation="ArticlePageRecommend" />
+  <Story name="ArticlePageRecommendation">
+    <ArticleTitle {...articleInfo} variation="ArticlePageRecommendation" />
   </Story>
 </Preview>
