fix several bugs

--- a/app/components/GenreCard/stories/Genre.stories.mdx
+++ b/app/components/GenreCard/stories/Genre.stories.mdx
@@ -3,13 +3,14 @@ import GenreCard from '../index.js';
 
 <Meta title="Components|GenreCard" component={GenreCard} />
 
-# GenreCard Props Validation
+# GenreCard
 
 <Props of={GenreCard} />
 
-# GenreCard Example
+# GenreCard Default
 
 <Preview>
+    <div />
   <Story name="GenreCard Default">
     <GenreCard
       genre="Art"
@@ -19,6 +20,13 @@ import GenreCard from '../index.js';
       onClick={() => {}}
     />
   </Story>
+
+</Preview>
+
+<!-- # GenreCard Active
+
+<Preview>
+  <div />
   <Story name="GenreCard Active">
     <GenreCard
       genre="Art"
@@ -28,4 +36,4 @@ import GenreCard from '../index.js';
       onClick={() => {}}
     />
   </Story>
-</Preview>
+</Preview> -->
