--- a/app/components/GenreCard/stories/Genre.stories.mdx
+++ b/app/components/GenreCard/stories/Genre.stories.mdx
@@ -1,4 +1,5 @@
 import { Meta, Story, Preview, Props } from '@storybook/addon-docs/blocks';
+import { action } from '@storybook/addon-actions';
 import GenreCard from '../index.js';
 
 <Meta title="Components|GenreCard" component={GenreCard} />
@@ -10,20 +11,19 @@ import GenreCard from '../index.js';
 # GenreCard Default
 
 <Preview>
-    <div />
+  <div />
   <Story name="GenreCard Default">
     <GenreCard
       genre="Art"
       genreLink="https://medium.com/topic/art"
       genreImg="https://cdn-images-1.medium.com/fit/c/560/360/1*H2blBoEmzkSusI_a4Bk0dg@2x.jpeg"
       genreState="defaultState"
-      onClick={() => {}}
+      onClick={action('button-click')}
     />
   </Story>
-
 </Preview>
 
-<!-- # GenreCard Active
+# GenreCard Active
 
 <Preview>
   <div />
@@ -33,7 +33,7 @@ import GenreCard from '../index.js';
       genreLink="https://medium.com/topic/art"
       genreImg="https://cdn-images-1.medium.com/fit/c/560/360/1*H2blBoEmzkSusI_a4Bk0dg@2x.jpeg"
       genreState="activeState"
-      onClick={() => {}}
+      onClick={action('button-click')}
     />
   </Story>
-</Preview> -->
+</Preview>
