--- a/app/components/GenreCard/stories/Genre.stories.mdx
+++ b/app/components/GenreCard/stories/Genre.stories.mdx
@@ -18,7 +18,7 @@ import GenreCard from '../index.js';
       genreLink="https://medium.com/topic/art"
       genreImg="https://cdn-images-1.medium.com/fit/c/560/360/1*H2blBoEmzkSusI_a4Bk0dg@2x.jpeg"
       genreState="defaultState"
-      onClick={action('button-click')}
+      onActiveStateChange={action('button-click')}
     />
   </Story>
 </Preview>
@@ -33,7 +33,7 @@ import GenreCard from '../index.js';
       genreLink="https://medium.com/topic/art"
       genreImg="https://cdn-images-1.medium.com/fit/c/560/360/1*H2blBoEmzkSusI_a4Bk0dg@2x.jpeg"
       genreState="activeState"
-      onClick={action('button-click')}
+      onActiveStateChange={action('button-click')}
     />
   </Story>
 </Preview>
