add poster icons and oter features, amend data names and styles related to poster, add new icons

--- a/app/components/ArticlePoster/stories/ArticlePoster.stories.mdx
+++ b/app/components/ArticlePoster/stories/ArticlePoster.stories.mdx
@@ -70,38 +70,38 @@ import articleInfo from './exampleData';
   </Story>
 </Preview>
 
-## CollectionHomepageListX2
+## PublicationHomepageListX2
 
 <Preview>
-  <Story name="CollectionHomepageListX2">
+  <Story name="PublicationHomepageListX2">
     <ArticlePoster
       {...authorInfo}
       {...articleInfo}
-      variation="CollectionHomepageListX2"
+      variation="PublicationHomepageListX2"
     />
   </Story>
 </Preview>
 
-## CollectionHomepageListX3
+## PublicationHomepageListX3
 
 <Preview>
-  <Story name="CollectionHomepageListX3">
+  <Story name="PublicationHomepageListX3">
     <ArticlePoster
       {...authorInfo}
       {...articleInfo}
-      variation="CollectionHomepageListX3"
+      variation="PublicationHomepageListX3"
     />
   </Story>
 </Preview>
 
-## CollectionHomepageHero
+## PublicationHomepageHero
 
 <Preview>
-  <Story name="CollectionHomepageHero">
+  <Story name="PublicationHomepageHero">
     <ArticlePoster
       {...authorInfo}
       {...articleInfo}
-      variation="CollectionHomepageHero"
+      variation="PublicationHomepageHero"
     />
   </Story>
 </Preview>
