--- a/app/components/ArticleTitle/stories/ArticleTitle.stories.mdx
+++ b/app/components/ArticleTitle/stories/ArticleTitle.stories.mdx
@@ -64,19 +64,19 @@ import articleInfo from './exampleData';
   </Story>
 </Preview>
 
-## CollectionHomepageHero
+## PublicationHomepageHero
 
 <Preview>
-  <Story name="CollectionHomepageHero">
-    <ArticleTitle {...articleInfo} variation="CollectionHomepageHero" />
+  <Story name="PublicationHomepageHero">
+    <ArticleTitle {...articleInfo} variation="PublicationHomepageHero" />
   </Story>
 </Preview>
 
-## CollectionHomepageList
+## PublicationHomepageList
 
 <Preview>
-  <Story name="CollectionHomepageList">
-    <ArticleTitle {...articleInfo} variation="CollectionHomepageList" />
+  <Story name="PublicationHomepageList">
+    <ArticleTitle {...articleInfo} variation="PublicationHomepageList" />
   </Story>
 </Preview>
 
