--- a/app/components/AuthorCard/stories/AuthorCard.stories.mdx
+++ b/app/components/AuthorCard/stories/AuthorCard.stories.mdx
@@ -18,11 +18,11 @@ import authorInfo from './exampleData';
   </Story>
 </Preview>
 
-## Collection page AuthorCard
+## Publication page AuthorCard
 
 <Preview>
-  <Story name="Collection page AuthorCard">
-    <AuthorCard {...authorInfo} variation="CollectionHome" />
+  <Story name="Publication page AuthorCard">
+    <AuthorCard {...authorInfo} variation="PublicationHome" />
   </Story>
 </Preview>
 
