--- a/app/components/OverlayTrigger/stories/OverlayTrigger.stories.mdx
+++ b/app/components/OverlayTrigger/stories/OverlayTrigger.stories.mdx
@@ -13,8 +13,6 @@ import { dropdownInfo, authorCardInfo, articleInfo } from './exampleData';
 
 <Props of={OverlayTrigger} />
 
-# Noted: the click action is not correctly rendered in storybook
-
 ## Overlay click trigger, dropdown, auto adjusting the position
 
 <Preview>
@@ -66,7 +64,7 @@ import { dropdownInfo, authorCardInfo, articleInfo } from './exampleData';
 <Preview>
   <Story name="Dropdown and top-bottom">
     <div>
-      <div style={{ marginLeft: '100px' }}>
+      <div style={{ marginTop: '200px' }}>
         <OverlayTrigger
           placement="dropdown"
           trigger="hover"
@@ -76,12 +74,17 @@ import { dropdownInfo, authorCardInfo, articleInfo } from './exampleData';
             </div>
           }
         >
-          <div style={{ padding: '10px', border: '1px solid' }}>
+          <div
+            style={{
+              padding: '10px',
+              border: '1px solid',
+            }}
+          >
             Hover Me Dropdown
           </div>
         </OverlayTrigger>
       </div>
-      <div style={{ marginLeft: '300px' }}>
+      <div style={{ marginLeft: '300px', marginTop: '-200px' }}>
         <OverlayTrigger
           placement="top-bottom"
           trigger="hover"
@@ -119,13 +122,13 @@ import { dropdownInfo, authorCardInfo, articleInfo } from './exampleData';
 
 <Preview>
   <Story name="Change background">
-    <div style={{ marginLeft: '100px' }}>
+    <div style={{ marginLeft: '200px' }}>
       <OverlayTrigger
         placement="dropdown"
         trigger="hover"
         popoverContent={
           <div style={{ padding: '20px 30px', color: '#fff' }}>
-            Now I'm black
+            I'm black with prop : {`{ popoverColor = "rgb(34,34,34)" }`}
           </div>
         }
         popoverColor="rgb(34,34,34)"
