--- a/app/components/OverlayTrigger/stories/OverlayTrigger.stories.mdx
+++ b/app/components/OverlayTrigger/stories/OverlayTrigger.stories.mdx
@@ -90,7 +90,7 @@ import { dropdownInfo, authorCardInfo, articleInfo } from './exampleData';
           trigger="hover"
           popoverContent={
             <div style={{ padding: '20px 30px', whiteSpace: 'nowrap' }}>
-              No enough space above me, so I rendered under trigger
+              No enough space above me, so I rendered below trigger
             </div>
           }
         >
