orgnised AuthorCard and add state

--- a/app/components/AuthorCard/stories/AuthorCard.stories.mdx
+++ b/app/components/AuthorCard/stories/AuthorCard.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Story, Preview, Props } from '@storybook/addon-docs/blocks';
 import AuthorCard from '..';
-import authorInfo from './exampleData';
+import userInfo from './exampleData';
 
 <Meta title="Components|AuhtorCard" component={AuthorCard} />
 
