add theme slectors and finish ArticlePage->ArticleBottonInfo

--- a/app/components/Button/stories/Icon.stories.mdx
+++ b/app/components/Button/stories/Icon.stories.mdx
@@ -17,7 +17,7 @@ import * as Icons from '../../../staticData/svgIcons/IconButton_Icons';
       <div>
         <span>{icon}</span>
         <br />
-        <IconButton iconName={icon} colorSet="pureBlack" />
+        <IconButton iconName={icon} theme="pureBlack" />
         <br />
       </div>
     ))}
@@ -30,16 +30,16 @@ import * as Icons from '../../../staticData/svgIcons/IconButton_Icons';
 
 <Preview>
   <Story name="glow">
-    <GlowIconButton iconName="clapIcon" colorSet="pureBlack" effect="glow" />
+    <GlowIconButton iconName="clapIcon" theme="pureBlack" effect="glow" />
   </Story>
 </Preview>
 
 ## Examples
 
 <Preview>
-  <IconButton iconName="logoIcon" colorSet="pureBlack" />
-  <IconButton iconName="twIcon" colorSet="gray" />
-  <IconButton iconName="moreIcon" colorSet="gray" />
-  <IconButton iconName="moreHollowIcon" colorSet="pureBlack" />
-  <IconButton iconName="clapIcon" colorSet="purple" effect="glow" />
+  <IconButton iconName="logoIcon" theme="pureBlack" />
+  <IconButton iconName="twIcon" theme="gray" />
+  <IconButton iconName="moreIcon" theme="gray" />
+  <IconButton iconName="moreHollowIcon" theme="pureBlack" />
+  <IconButton iconName="clapIcon" theme="purple" effect="glow" />
 </Preview>
