--- a/app/components/Button/stories/Outlined.stories.mdx
+++ b/app/components/Button/stories/Outlined.stories.mdx
@@ -11,28 +11,13 @@ import { OutlinedButton } from '..';
 
 <Preview>
   <Story name="small">
-    <OutlinedButton
-      text="small"
-      type="outlined"
-      size="small"
-      colorSet="black"
-    />
+    <OutlinedButton text="small" type="outlined" size="small" theme="black" />
   </Story>
   <Story name="middle">
-    <OutlinedButton
-      text="middle"
-      type="outlined"
-      size="middle"
-      colorSet="black"
-    />
+    <OutlinedButton text="middle" type="outlined" size="middle" theme="black" />
   </Story>
   <Story name="large">
-    <OutlinedButton
-      text="large"
-      type="outlined"
-      size="large"
-      colorSet="black"
-    />
+    <OutlinedButton text="large" type="outlined" size="large" theme="black" />
   </Story>
 </Preview>
 
@@ -44,39 +29,19 @@ import { OutlinedButton } from '..';
       text="outlined"
       type="outlined"
       size="middle"
-      colorSet="black"
+      theme="black"
     />
   </Story>
   <Story name="filled">
-    <OutlinedButton
-      text="filled"
-      type="filled"
-      size="middle"
-      colorSet="black"
-    />
+    <OutlinedButton text="filled" type="filled" size="middle" theme="black" />
   </Story>
 </Preview>
 
 ## Example
 
 <Preview>
-  <OutlinedButton text="Follow" type="outlined" size="small" colorSet="blue" />
-  <OutlinedButton
-    text="Following"
-    type="filled"
-    size="large"
-    colorSet="green"
-  />
-  <OutlinedButton
-    text="Upgrade"
-    type="outlined"
-    size="middle"
-    colorSet="black"
-  />
-  <OutlinedButton
-    text="Get Started"
-    type="outlined"
-    size="large"
-    colorSet="red"
-  />
+  <OutlinedButton text="Follow" type="outlined" size="small" theme="blue" />
+  <OutlinedButton text="Following" type="filled" size="large" theme="green" />
+  <OutlinedButton text="Upgrade" type="outlined" size="middle" theme="black" />
+  <OutlinedButton text="Get Started" type="outlined" size="large" theme="red" />
 </Preview>
